--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body class="home page students">
+  <!-- added something to complete the lesson, I did not fork in our pair programming and just want to complete the lesson since I did do it. -->
   <!-- Begin Main Wrapper -->
   <div class="main-wrapper">
     <!-- Begin Header -->
